# rust-hexagonal

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: lib.rs  main.rs
src/config/: config_loader.rs  config_models.rs  config_stage.rs  mod.rs
src/route/: router.rs
src/services/users/: mod.rs  port_http.rs  port_repository.rs  port_usecase.rs
src/services/users/entity/: user.rs
src/services/users/http/: adap_http.rs  mod.rs
src/services/users/repository/: adap_repository.rs  mod.rs
src/services/users/usecase/: adap_usecase.rs  mod.rs
src/utils/: axum_server.rs  mod.rs  postgres.rs
src/utils/migrations/: 000001_create_users_table.down.psql  000001_create_users_table.up.psql  000002_create_images_table.down.psql  000002_create_images_table.up.psql  000003_create_department_table.down.psql  000003_create_department_table.up.psql  000004_create_users_departments_table.down.psql  000004_create_users_departments_table.up.psql
src/utils/migrations/master/: 000001_create_users.up.psql  000002_create_images.up.psql  000003_create_users_departments.up.psql  000004_create_users_departments.up.psql
